--- a/Template_Bootcamps_XPE.ipynb
+++ b/Template_Bootcamps_XPE.ipynb
@@ -5,22 +5,33 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
+        "w6zOiOhtoAML",
+        "h5NwX_lQc6pE",
         "KFIjQPcFvd-M",
+        "HdEGCFg8sxRz",
+        "UJmhfEYho2i3",
         "U1RgCrkEvjSm",
         "cc4KSQxWw_H-",
+        "7EygBQXnxRbb",
+        "E6leddspxRbb",
+        "pNEWMLMBqoxb",
         "u5RtHLX2xRbb",
         "jgXZXGR8xRbb",
+        "uT4zhO1MxTBZ",
         "3uVVmLe2xTBZ",
         "TBjgSoGtxTBZ",
+        "qhg_jI8tqskA",
         "z0gjqISVxTBZ",
         "1yyleikcxTBa",
+        "GctoBAjUyCdq",
         "FWvvb9oUyCdq",
         "nHJNUiY7yCdq",
+        "gm7GXj7_qv5v",
         "7O_q27G2yCdq",
         "lYlFWXumyCdr"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOFiXcSz9aO1BFUuyEXhkhT",
+      "authorship_tag": "ABX9TyPsQ1me6PQXnzxEh6W4c0xs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +50,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/simonfriedmann/Colabs_Templates/blob/main/Template_Bootcamps_XPE.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/simonfriedmann/raw_noteboks_TEMPLATES/blob/main/Template_Bootcamps_XPE.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -49,6 +60,22 @@
       ],
       "metadata": {
         "id": "w6zOiOhtoAML"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Plano de ensino"
+      ],
+      "metadata": {
+        "id": "h5NwX_lQc6pE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "78pYQwkpqVQd"
       }
     },
     {
@@ -123,7 +150,7 @@
       "cell_type": "markdown",
       "source": [],
       "metadata": {
-        "id": "UrOp2jBNMeus"
+        "id": "G-9RIU8Dqa3n"
       }
     },
     {
@@ -167,6 +194,165 @@
       "source": [],
       "metadata": {
         "id": "myHHB8RrMgkk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Aulas Interativas"
+      ],
+      "metadata": {
+        "id": "UJmhfEYho2i3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Zxsqo0tYp903"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Dg9WtSasp908"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "WZuLz2FJp909"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "rCYlSv_qp909"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "k8Oh4z-sp909"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "GC17iZ01p909"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "bhJZFbcBp-tf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "OlgtSpW1p-tf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "M5Z7rTZyp-tf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "sb1owodlp-tf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ROfYbUeUp-tf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "AUp4dOKhp-tf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "oTWwr59Ip_Bt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "weSO230hp_Bu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "I_SAmtyip_Bu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Q9ffbD53p_Bu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "B25F4nz9p_Bu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "GqlDdiIRp_Bu"
       }
     },
     {
@@ -299,6 +485,22 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### Plano de ensino"
+      ],
+      "metadata": {
+        "id": "1v3USGhQdECP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "pCPNd6ZhdECQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Apostila "
       ],
       "metadata": {
@@ -338,13 +540,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "n4xvLSv_P4OS"
-      }
     },
     {
       "cell_type": "code",
@@ -419,6 +614,165 @@
       "source": [],
       "metadata": {
         "id": "ZeJteYl8NC9s"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Aulas Interativas"
+      ],
+      "metadata": {
+        "id": "pNEWMLMBqoxb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "noGAvsFLqoxb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "21Yifwbcqoxb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0ZMyK9SAqoxb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "j7khLcKaqoxc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VCLxnJ2gqoxc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Fx22NVIoqoxc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "aE5rw8_Vqoxc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QIJCNHVRqoxc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "d2BBEQjTqoxc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FiHCfOoDqoxc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "F8F1fzgVqoxc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "a0yTBrmfqoxc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "F-Ak_SFnqoxc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "SLdOHqQGqoxc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "nJvM0B7Cqoxc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "RUe8XVUrqoxc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "qIKNfv6Wqoxc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "eFYVxwYYqoxc"
       }
     },
     {
@@ -551,6 +905,22 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### Plano de ensino"
+      ],
+      "metadata": {
+        "id": "LS4HU64ZdE7K"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "HLvfETUmdE7K"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Apostila "
       ],
       "metadata": {
@@ -664,6 +1034,165 @@
       "source": [],
       "metadata": {
         "id": "Sc681RYZNHeB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Aulas Interativas"
+      ],
+      "metadata": {
+        "id": "qhg_jI8tqskA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "AQyDUSlRqskB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YLFo0kWvqskB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1vjHiEQEqskB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vAjqcKhZqskB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "E-RDNhvWqskB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "4j9Ix_n8qskB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "YAJJcpaiqskB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "kIhpEZtWqskB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "kopMxOYjqskB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "lHaq7qz9qskB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "kVlDzN8MqskB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "sOaMt4l2qskB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "tTv2QEWYqskB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "T4z8sxTkqskB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Ujomu0eNqskB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VAPDF7N0qskB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "k3cn0Z0VqskB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "HfDX5CWCqskB"
       }
     },
     {
@@ -796,6 +1325,22 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### Plano de ensino"
+      ],
+      "metadata": {
+        "id": "4-81DIHcdF7H"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "at6SqOTrdF7I"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Apostila "
       ],
       "metadata": {
@@ -909,6 +1454,165 @@
       "source": [],
       "metadata": {
         "id": "00u2RacjNMCe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Aulas Interativas"
+      ],
+      "metadata": {
+        "id": "gm7GXj7_qv5v"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "uJg0Fn4iqv5v"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HrQhLB-Jqv5v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3FzvqF1Wqv5w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "BUOzH87Iqv5w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8p1mreY-qv5w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "-IQsBZ6dqv5w"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "tbGeBC3-qv5w"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "iJJM16S3qv5w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "BqW01VH2qv5w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "aAvQTJUMqv5w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Nzjcj_qVqv5w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Ay1UBiIaqv5w"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Bv7sUwedqv5w"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3Kb54xaxqv5x"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "l0xTtLyDqv5x"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "C3coAGVDqv5x"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Pq9mI6Tuqv5x"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "VJMDi2QGqv5x"
       }
     },
     {
